--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,8 @@ env_variables:
   APP_ID: <your-app-id>
   MASTER_KEY: <your-master-key>
   SERVER_URL: https://your-project-id.appspot.com/parse
+  SERVER_PORT: 1337
   # --OPTIONAL--
   # FILE_KEY: <your-file-key>
-  # PARSE_MOUNT: /parse
+  PARSE_MOUNT: /parse
   # CLOUD_CODE_MAIN:  
