--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "axios": "1.3.5",
+    "dotenv": "^16.3.1",
     "express": "4.18.2",
     "parse": "4.1.0",
+    "parse-dashboard": "^5.1.0",
     "parse-server": "6.2.1"
   },
   "type": "module",
