--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "4.18.2",
     "parse": "4.1.0",
     "parse-dashboard": "^5.1.0",
-    "parse-server": "6.2.1"
+    "parse-server": "6.2.1",
+    "parse-server-api-mail-adapter": "^3.1.1"
   },
   "type": "module",
   "devDependencies": {
